--- a/index2.html
+++ b/index2.html
@@ -15,10 +15,11 @@
 
   <script>
     function sayHello() {
-      alert("Hello, World!");
+      alert(" World!");
     }
   </script>
 
 </body>
 </html>
+
 
